<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackStart"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint=""
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        android:textAlignment="textEnd"
        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button36"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="precentBTNPush"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:onClick="backspaceBTNPush"
            android:textColor="@color/greyAccent"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="clearBTNPush"
            android:text="@string/clear"
            android:textColor="@color/redAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="parOpenBTNPush"
            android:text="@string/parenthesesOpen"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="parCloseBTNPush"
            android:text="@string/parenthesesClose"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTNPush"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTNPush"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTNPush"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="divideBTNPush"
            android:text="@string/divide"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourTNPush"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTNPush"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTNPush"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="multiplyBTNPush"
            android:text="@string/multiply"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTNPush"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTNPush"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTNPush"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="subtractBTNPush"
            android:text="@string/subtract"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTNPush"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="decimalBTNPush"
            android:text="@string/decimal"
            android:textColor="@color/greyAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button21"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="addBTNPush"
            android:text="@string/add"
            android:textColor="@color/greenAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_background"
            android:onClick="equalsBTNPush"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button21" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>